--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,37 +1,67 @@
+body{
+
+    background-color: rgb(223, 221, 221); 
+
+}
 form{
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 50vw;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f0f8ff; /* רקע תכלת בהיר */
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
-input{
-    margin-bottom: 20px;
 
-}
 #submitButton{
     width: 10vw;
     height: 6vh;
+    background-color: rgb(223, 221, 221); /* רקע תכלת בהיר */
 
 }
-#nameInput,#phoneInput,#numRoomsInput,#emailInput{
-    width: 11vw;
+/* איך משנים את צבע הגבול בזמן פוקוס */
+#nameInput, #phoneInput, #numRoomsInput, #emailInput{
+   
+    width: 18vw;
     height: 7vh;
+
+    font-size: larger;
+    color: rgb(34, 34, 34);
+    border: rgb(34, 165, 34) 3px solid;
+    background-color: rgb(223, 221, 221); 
+
+    margin-bottom: 20px;
+    resize: vertical;
 }
+
+
 #adressInput{
-    width: 13vw;
-    height: 8vh;
+   
+    width: 18vw;
+    height: 7vh;
+    font-size: larger;
+    margin-bottom: 20px;
+    resize: vertical;
+    border: rgb(34, 165, 34) 3px solid;
+    background-color: rgb(223, 221, 221); 
+
 }
+
 .error{
     width: 11vw;
     height: 7vh;
- color: red;
+    color: red;
 }
 
 #internet, #kitchen, #coffeeMachine {
     width: 2vw;
     height: 2vh;
+    background-color: grey;
 }
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    color: rgb(51, 50, 50);
+  }
