--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,10 +1,12 @@
 body{
 
-    background-color: rgb(223, 221, 221); 
+    background-color: rgb(246, 246, 246); 
 
 }
 form{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     width: 50vw;
     margin: 20px auto;
@@ -17,7 +19,8 @@ form{
 #submitButton{
     width: 10vw;
     height: 6vh;
-    background-color: rgb(223, 221, 221); /* רקע תכלת בהיר */
+    background-color:  rgb(62, 241, 62); 
+    color: white;
 
 }
 /* איך משנים את צבע הגבול בזמן פוקוס */
@@ -28,8 +31,8 @@ form{
 
     font-size: larger;
     color: rgb(34, 34, 34);
-    border: rgb(34, 165, 34) 3px solid;
-    background-color: rgb(223, 221, 221); 
+    border: rgb(62, 241, 62) 3px solid;
+    /* background-color: rgb(223, 221, 221);  */
 
     margin-bottom: 20px;
     resize: vertical;
@@ -43,8 +46,8 @@ form{
     font-size: larger;
     margin-bottom: 20px;
     resize: vertical;
-    border: rgb(34, 165, 34) 3px solid;
-    background-color: rgb(223, 221, 221); 
+    border:  rgb(62, 241, 62) 3px solid;
+    /* background-color: rgb(223, 221, 221);  */
 
 }
 
@@ -65,3 +68,11 @@ label {
     display: inline-block;
     color: rgb(51, 50, 50);
   }
+
+#options{
+    position: absolute;
+    max-height: 20em;
+    border: 0 none;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
