--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,6 +1,8 @@
-body{
+#father{
 
-    background-color: rgb(246, 246, 246); 
+    /* background-color: rgb(246, 246, 246);  */
+    display: flex;
+    flex-direction: row;
 
 }
 form{
@@ -8,22 +10,23 @@ form{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 50vw;
+    width: 40vw;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+   
+    box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.15), 0px 8px 24px rgba(0, 0, 0, 0.1);
+
     background-color: white;
 }
 
 #submitButton{
     width: 10vw;
     height: 6vh;
-    background-color:  rgb(62, 241, 62); 
+    background-color: rgb(62, 241, 62); 
     color: white;
 
 }
-/* איך משנים את צבע הגבול בזמן פוקוס */
 #nameInput, #phoneInput, #numRoomsInput, #emailInput{
    
     width: 18vw;
@@ -32,12 +35,24 @@ form{
     font-size: larger;
     color: rgb(34, 34, 34);
     border: rgb(62, 241, 62) 3px solid;
-    /* background-color: rgb(223, 221, 221);  */
+    background-color:white; 
 
     margin-bottom: 20px;
     resize: vertical;
 }
 
+
+input:hover, #nameInput:hover, #phoneInput:hover, #numRoomsInput:hover, #emailInput:hover{
+    
+    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.1);
+
+}
+
+#adressInput:focus, #nameInput:focus, #phoneInput:focus, #numRoomsInput:focus, #emailInput:focus{
+    border: rgb(62, 241, 62) 4px solid;
+    outline: none;
+    box-shadow: none;
+}
 
 #adressInput{
    
@@ -75,4 +90,13 @@ label {
     border: 0 none;
     overflow-x: hidden;
     overflow-y: auto;
+}
+#status, #numRooms, #distance{
+    margin: 4px;
+    border:  rgb(62, 241, 62) 1px solid;
+}
+#status:focus, #numRooms:focus, #distance:focus{
+    outline: none;
+    border:  rgb(62, 241, 62) 2px solid;
+
 }
